--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -90,7 +90,7 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
 ### Implementation
 
- - A pure-tcl initial implementation may be found at 
+ - A pure-tcl initial implementation may be found as [oproc-1.0.0.tm](https://github.com/Dash-OS/tcl-modules/blob/master/oproc-1.0.0.tm)
 
 ### Proposed Changes & Ideas
 
