[2.102417.187] 10/24/17 at 01:06 AM | 1 updated tm modules | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -90,7 +90,7 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
 ### Implementation
 
- - A pure-tcl initial implementation may be found as [oproc-1.0.0.tm](https://github.com/Dash-OS/tcl-modules/blob/master/oproc-1.0.0.tm)
+ - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.0.tm) which provides `oproc`, `oapply`, and `omethod`.
 
 ### Proposed Changes & Ideas
 
