[2.102417.188] 10/24/17 at 02:06 AM | 1 updated tm modules | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -6,7 +6,6 @@ This TIP proposes an enhancement of the proc command to make the handling of the
 
 This is meant to be a simpler alternative to other proposals such as [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/457.md) (Named Arguments) which attempt to provide a framework of options and features to arguments.  
 
-
 ## Abstract
 
 This TIP proposes an enhancement of the Tcl language to support option parsing of proc, method, and lambdas (apply).  
@@ -33,8 +32,11 @@ Throughout this specification, there are three basic principles of options which
 
 - Options handling can be confirmed when all of the following are true:
   1. The first argument begins with a dash followed by the option key (-opt).
-  2. Each option key begins with a dash (-), optionally followed by a single value (value name) indicating a value is expected when the option is given.
+  2. Each option key begins with a dash (-), optionally followed by a single value (value name), indicating a value is expected.
   3. Option definitions are terminated by a double-dash (--) at which point standard arguments may be defined `{-opt1 -opt2 val -- foo bar args}`.
+- If any of these rules are not met, the result is evaluated normally as a proc/method/apply command.
+- `[info options]` will be provided to get the options spec (if any) of a proc
+- `[info object/class options]` will be provided to get the options spec (if any) of a method.
 
 ## Declaration Syntax Examples
 
@@ -84,20 +86,97 @@ proc switch {
 } { # Handle # }
 ```
 
+### Lambda
+
+> showing apply with options
+
+```tcl
+apply {{-foo -- bar} { # Handle # }}
+```
+
+### Method
+
+```tcl
+::oo::class create foo {
+  method bar {-foo -- bar} {
+
+  }
+}
+```
+
 ---
 
 While such a syntax does have a few considerations, it provides a clean syntax for defining the available options which is easily readable, parseable, and enforceable.  Additionally, it allows for automatically generated error messages which can hint at the available option or value.
 
 ### Implementation
 
- - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.0.tm) which provides `oproc`, `oapply`, and `omethod`.
+  - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.0.tm) which provides `oproc`, `oapply`, and `omethod`.
+   - > A few deviations are currently required from the specification to provide all features from the spec.  Namely the `-define` option being provided on each command which indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda).
+  -  Tests / Examples can be found [in the examples folder](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)
+
+### What about upvar, defaults, switch, and/or required?
+
+All of these extra options could be added to such a specification, but they are trivial and just as performant to implement within the body itself as they can be heavily optimized via bytecode and even further via quadcode.
+
+With that in mind, these "extras" become noise that make the syntax more difficult to learn, read, and understand quickly.  
+
+Without these extra options we are able to provide a syntax that quite literally speaks for itself in more ways than one.
+
+In addition, there is likely to be many circumstances even if these are provided that the
+programmed would just set them as optional anyway so custom/better error messaging or handling could be provided.
+
+##### Example: required & upvar
+
+For example, if we wanted to implement some required options as well as upvar, it would only take a few lines of familiar code to accomplish.
+
+> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were available, giving a general purpose solution on top of this.
+
+```tcl
+proc myproc {-upvar varname -command callback -- args} {
+  if {![dict exists $opts -upvar] || ![dict exists $opts -command]} {
+    # throw your error since it is required
+  }
+  upvar 1 [dict get $opts -upvar] var
+  # ... do stuff
+}
+```
+
+##### Example: switch
+
+Again, too trivial to implement for this to be cause for concern here.  This is another example of where a `haskeys` subcommand for dict could provide beneficial in the sense of `[dict haskeys -any $opts -one -two -three]`.  
+
+While not a perfect replacement in this case, it easily provides the same end result.
+
+```tcl
+proc p {-debug -quiet -verbose -- args} {
+  #... do stuff - then when we care about the opts ...
+  if {[dict exists $opts -debug] || [dict exists $opts -verbose]} {
+    # ...
+  }
+}
+
+# or
+
+proc p {-debug -quiet -verbose -- args} {
+  # since none of our opts have values we carea bout
+  set opts [dict keys $opts]
+  if {"-debug" in $opts || "-verbose" in $opts} {
+    # ...
+  }
+}
+```
 
 ### Proposed Changes & Ideas
 
- - Allow boolean/toggle options to provide a true/false value.  (-opt or -opt 1 or -opt 0).
- - Modify the general specification so that it can be extended in the future to take options (allowing it to provide the features of other proposals such as  [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/479.md)).
+ 1. Allow boolean/toggle options to provide a true/false value.  (-opt or -opt 1 or -opt 0).
+
+ 2. Modify the general specification so that it can be extended in the future to take options (allowing it to provide the features of other proposals such as  [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/479.md)).
    - Likely as simple as allowing the second value to be a list in a similar fashion to how 457's proposal currently defines.
- - ~~Allow opts to be placed after the command arguments (this would mean args could not be used and is likely not a good solution~~ `simply using $args should be sufficient in this case.`
- - Instead of a variable (`$opts`), options become local variables within the command body.
- - Provide a way for options which may be boolean (-opt) OR value-based (-opt value).
+
+ 3. ~~Allow opts to be placed after the command arguments (this would mean args could not be used and is likely not a good solution~~
+   - > simply using `$args` should be sufficient in this case.
+ 4. ~~Instead of a variable (`$opts`), options become local variables within the command body.~~
+  - > This is not ideal as the `$opts` dict allows us to easily pass opts on and removes the necessity for either removing the prefixed `-` or having to use `${-opt}` everywhere.
+
+ 5. Provide a way for options which may be boolean (-opt) OR value-based (-opt value).
    - One method for declaring this was proposed as `{-opt1 ?valName -opt2 valName -- args}` where `-opt1` could be provided as `procname -opt1` or `procname -opt1 $value`
