[2.102417.189] 10/24/17 at 02:12 AM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -137,7 +137,6 @@ proc myproc {-upvar varname -command callback -- args} {
     # throw your error since it is required
   }
   upvar 1 [dict get $opts -upvar] var
-  # ... do stuff
 }
 ```
 
@@ -149,19 +148,17 @@ While not a perfect replacement in this case, it easily provides the same end re
 
 ```tcl
 proc p {-debug -quiet -verbose -- args} {
-  #... do stuff - then when we care about the opts ...
   if {[dict exists $opts -debug] || [dict exists $opts -verbose]} {
-    # ...
+    # log stuff!
   }
 }
 
 # or
 
 proc p {-debug -quiet -verbose -- args} {
-  # since none of our opts have values we carea bout
   set opts [dict keys $opts]
   if {"-debug" in $opts || "-verbose" in $opts} {
-    # ...
+    # log stuff!
   }
 }
 ```
