[2.102417.190] 10/24/17 at 02:20 AM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -35,6 +35,7 @@ Throughout this specification, there are three basic principles of options which
   2. Each option key begins with a dash (-), optionally followed by a single value (value name), indicating a value is expected.
   3. Option definitions are terminated by a double-dash (--) at which point standard arguments may be defined `{-opt1 -opt2 val -- foo bar args}`.
 - If any of these rules are not met, the result is evaluated normally as a proc/method/apply command.
+- A local variable `$opts` is provided.  A `dict` with the options that were called.  Single element options (-opt) have a boolean value of 1, two element options have a value set to the value given by the caller.
 - `[info options]` will be provided to get the options spec (if any) of a proc
 - `[info object/class options]` will be provided to get the options spec (if any) of a method.
 
@@ -91,7 +92,9 @@ proc switch {
 > showing apply with options
 
 ```tcl
-apply {{-foo -- bar} { # Handle # }}
+set lambda {{-foo -bar -- args} { # Handle # }}
+set foo [list ::apply $lambda -foo --]
+set bar [list ::apply $lambda -bar --]
 ```
 
 ### Method
