[2.102417.192] 10/24/17 at 02:30 AM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -121,12 +121,11 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
 All of these extra options could be added to such a specification, but they are trivial and just as performant to implement within the body itself as they can be heavily optimized via bytecode and even further via quadcode.
 
-With that in mind, these "extras" become noise that make the syntax more difficult to learn, read, and understand quickly.  
+With that in mind, these "extras" become noise that make the syntax more difficult to learn, read, and understand.
 
-Without these extra options we are able to provide a syntax that quite literally speaks for itself in more ways than one.
+Without these extra options we are able to provide a syntax that quite literally speaks for itself in more ways than one and does not require the excessive bracketing of the other implementations.
 
-In addition, there is likely to be many circumstances even if these are provided that the
-programmed would just set them as optional anyway so custom/better error messaging or handling could be provided.
+In addition, there is likely to be many circumstances, even if these features are provided, that the programmer would just set them as optional anyway so that custom error handling could be provided.
 
 ##### Example: required & upvar
 
