[2.102417.193] 10/24/17 at 03:33 AM | 1 updated tm modules | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -26,7 +26,7 @@ Throughout this specification, there are three basic principles of options which
 
   1. Options may be provided in any order, so-long as they come before the command arguments.
   2. To the parser, options are always optional. It is up to the command to handle options which were expected but not provided or invalid.
-  3. Options may or may not require a value provided.  Therefore, options will be either one (-opt) or two (-opt value) elements.  It is an error to provide options which do not conform to their defined format.
+  3. Options may or may not require an accompanying value provided when the caller is invoking the command.  Therefore, options will be either one (-opt) or two (-opt value) elements.  It is an error to provide options which do not conform to their defined format.
 
 > Below is a rough outline of the specifics of the specification as this is a WORK IN PROGRESS - feedback welcome :)
 
@@ -117,7 +117,20 @@ While such a syntax does have a few considerations, it provides a clean syntax f
    - > A few deviations are currently required from the specification to provide all features from the spec.  Namely the `-define` option being provided on each command which indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda).
   -  Tests / Examples can be found [in the examples folder](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)
 
-### What about upvar, defaults, switch, and/or required?
+### What about default values?
+
+There is some demand for default values being available for any kind of option/argument handling improvements.  Since `$opts` is a `dict`,  this is trivial to implement in the body with minimal (if any) performance difference.  A cleaner syntax within the options definitions is preferred by this proposal at this time.  
+
+```tcl
+proc somecall {-command callback -timeout ms -url url -method method --} {
+  set opts [dict merge {-timeout 15000 -method GET} $opts]
+  # ... -timeout default is 15000 and -method default is now GET
+}
+```
+
+> See the [examples](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)] for how default values might be implemented into the syntax if the demand is overwhelming.
+
+### What about upvar, switch, and/or required?
 
 All of these extra options could be added to such a specification, but they are trivial and just as performant to implement within the body itself as they can be heavily optimized via bytecode and even further via quadcode.
 
@@ -131,7 +144,7 @@ In addition, there is likely to be many circumstances, even if these features ar
 
 For example, if we wanted to implement some required options as well as upvar, it would only take a few lines of familiar code to accomplish.
 
-> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were available, giving a general purpose solution on top of this.
+> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were available, giving a general purpose solution on top of this which can be used in many other places as well.
 
 ```tcl
 proc myproc {-upvar varname -command callback -- args} {
