[2.102417.195] 10/24/17 at 04:13 AM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -95,6 +95,12 @@ proc switch {
 set lambda {{-foo -bar -- args} { # Handle # }}
 set foo [list ::apply $lambda -foo --]
 set bar [list ::apply $lambda -bar --]
+
+# called with $opts being -foo 1 and $args being one two three
+{*}$foo one two three
+
+# called with $opts being -bar 1 and $args being four five six
+{*}$bar four five six
 ```
 
 ### Method
@@ -144,7 +150,7 @@ In addition, there is likely to be many circumstances, even if these features ar
 
 For example, if we wanted to implement some required options as well as upvar, it would only take a few lines of familiar code to accomplish.
 
-> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were available, giving a general purpose solution on top of this which can be used in many other places as well.
+> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were instead made available. Giving a general purpose solution benefits more users in more places while maintaining simple & readable syntax.
 
 ```tcl
 proc myproc {-upvar varname -command callback -- args} {
