[2.102417.201] 10/24/17 at 06:45 PM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -121,15 +121,16 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
   - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.4.tm) which provides `oproc`, `oapply`, and `omethod`.
    - > A few deviations are currently required from the specification to provide all features from the spec.  Namely the `-define` option being provided on each command which indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda).
+   - > In addition, in this implementation one can change the name of the opts var by providing an option to the oproc/apply/method commands -opts with the desired name of the variable.  `-opts myOptsDict`
+   - > For those that are against the creation of an `opts dict`, it is opt-out by either giving the opts an empty name (`-opts {}`) or providing the `-noopts` flag to the optcmd.
   -  Tests / Examples can be found [in the examples folder](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)
 
 ### What about default values?
 
-There is some demand for default values being available for any kind of option/argument handling improvements.  Since `$opts` is a `dict`,  this is trivial to implement in the body with minimal (if any) performance difference.  A cleaner syntax within the options definitions is preferred by this proposal at this time.  
+Default values are implemented for options that have named values defined.  This is done similar to how default Tcl argument handling is done, by providing the default value as the second element.
 
 ```tcl
-proc somecall {-command callback -timeout ms -url url -method method --} {
-  set opts [dict merge {-timeout 15000 -method GET} $opts]
+proc somecall {-command callback -timeout {ms 15000} -url url -method {method GET} --} {
   # ... -timeout default is 15000 and -method default is now GET
 }
 ```
