--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -35,7 +35,9 @@ Throughout this specification, there are three basic principles of options which
   2. Each option key begins with a dash (-), optionally followed by a single value (value name), indicating a value is expected.
   3. Option definitions are terminated by a double-dash (--) at which point standard arguments may be defined `{-opt1 -opt2 val -- foo bar args}`.
 - If any of these rules are not met, the result is evaluated normally as a proc/method/apply command.
-- A local variable `$opts` is provided.  A `dict` with the options that were called.  Single element options (-opt) have a boolean value of 1, two element options have a value set to the value given by the caller.
+- A local array `$opts` is provided.  Each opt defined will be defined on the array.  Single element options (-opt) have a boolean value of 1, two element options have a value set to the value given by the caller, or their default value (if any) if it was not defined by the caller.
+- The opts array contains an element that contains the raw opts that were used.  This is helpful for passing the opts if needed.  `{*}$opts()`
+- See the Implementation for how local variable options can be handled.
 - `[info options]` will be provided to get the options spec (if any) of a proc
 - `[info object/class options]` will be provided to get the options spec (if any) of a method.
 
@@ -121,8 +123,8 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
   - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.4.tm) which provides `oproc`, `oapply`, and `omethod`.
    - > A few deviations are currently required from the specification to provide all features from the spec.  Namely the `-define` option being provided on each command which indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda).
-   - > In addition, in this implementation one can change the name of the opts var by providing an option to the oproc/apply/method commands -opts with the desired name of the variable.  `-opts myOptsDict`
-   - > For those that are against the creation of an `opts dict`, it is opt-out by either giving the opts an empty name (`-opts {}`) or providing the `-noopts` flag to the optcmd.
+   - > In addition, in this implementation one can change the name of the opts var by providing an option to the oproc/apply/method commands -opts with the desired name of the variable.  `-opts myOptsArray`
+   - > For those that are against the creation of the `opts` array, it is opt-out by either giving the opts an empty name (`-opts {}`) or providing the `-noopts` flag to the appropriate optcmd.  This will set any opts as local variables in the procedure body when evaluated.
   -  Tests / Examples can be found [in the examples folder](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)
 
 ### What about default values?
