[2.102417.208] 10/24/17 at 08:45 PM | 1 updated tm modules | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -121,10 +121,11 @@ While such a syntax does have a few considerations, it provides a clean syntax f
 
 ### Implementation
 
-  - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.4.tm) which provides `oproc`, `oapply`, and `omethod`.
-   - > A few deviations are currently required from the specification to provide all features from the spec.  Namely the `-define` option being provided on each command which indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda).
+  - A pure-tcl initial implementation may be found as [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.0.4.tm) which provides `oproc`, `oapply`, and `omethod`.  A few deviations are currently required from the specification to provide all features from the spec as well as to allow trying various ways the specification could be implemented.  These are controlled by passing options to the optcmd of your choice since the optcmds are all optcmds themselves.
+   - > Providing the `-define` option indicates that we want the compiled command returned rather than invoked (so we can pass it to `::oo::define` or use it as a pre-compiled lambda for perf gains).
    - > In addition, in this implementation one can change the name of the opts var by providing an option to the oproc/apply/method commands -opts with the desired name of the variable.  `-opts myOptsArray`
-   - > For those that are against the creation of the `opts` array, it is opt-out by either giving the opts an empty name (`-opts {}`) or providing the `-noopts` flag to the appropriate optcmd.  This will set any opts as local variables in the procedure body when evaluated.
+   - > If a dict is desired instead of an array, defining `-dictopts` will make the opts variable be created as a dict.
+   - > For those that are against the creation of the `opts` array, it is opt-out by providing the `-localopts` flag to the appropriate optcmd.  This will set any opts as local variables in the procedure body when evaluated (including their preceeding -).
   -  Tests / Examples can be found [in the examples folder](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)
 
 ### What about default values?
