[2.102417.209] 10/24/17 at 08:58 PM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -150,30 +150,32 @@ Without these extra options we are able to provide a syntax that quite literally
 
 In addition, there is likely to be many circumstances, even if these features are provided, that the programmer would just set them as optional anyway so that custom error handling could be provided.
 
+That being said, the syntax does leave open the possibility of being extended.  This would be done by treating the named value as an optscmd (`-opt {val -required -upvar myvar defaultval}`)
+
 ##### Example: required & upvar
 
 For example, if we wanted to implement some required options as well as upvar, it would only take a few lines of familiar code to accomplish.
 
-> This could be further sugared if something like `[dict haskeys $opts -upvar -command]` were instead made available. Giving a general purpose solution benefits more users in more places while maintaining simple & readable syntax.
+> This could be further sugared if something like `[lhas $l {*}$keys]` were available for checking if all elements are present in a given list.
 
 ```tcl
 proc myproc {-upvar varname -command callback -- args} {
-  if {![dict exists $opts -upvar] || ![dict exists $opts -command]} {
+  if {![info exists opts(-upvar)] || ![info exists opts(-command)]} {
     # throw your error since it is required
   }
-  upvar 1 [dict get $opts -upvar] var
+  upvar 1 $opts(-upvar) var
 }
 ```
 
 ##### Example: switch
 
-Again, too trivial to implement for this to be cause for concern here.  This is another example of where a `haskeys` subcommand for dict could provide beneficial in the sense of `[dict haskeys -any $opts -one -two -three]`.  
+Again, too trivial to implement for this to be cause for concern here.
 
 While not a perfect replacement in this case, it easily provides the same end result.
 
 ```tcl
 proc p {-debug -quiet -verbose -- args} {
-  if {[dict exists $opts -debug] || [dict exists $opts -verbose]} {
+  if {[info exists opts(-debug)] || [info exists opts(-verbose)]} {
     # log stuff!
   }
 }
@@ -181,7 +183,7 @@ proc p {-debug -quiet -verbose -- args} {
 # or
 
 proc p {-debug -quiet -verbose -- args} {
-  set opts [dict keys $opts]
+  set opts [array names $opts]
   if {"-debug" in $opts || "-verbose" in $opts} {
     # log stuff!
   }
@@ -192,8 +194,9 @@ proc p {-debug -quiet -verbose -- args} {
 
  1. Allow boolean/toggle options to provide a true/false value.  (-opt or -opt 1 or -opt 0).
 
- 2. Modify the general specification so that it can be extended in the future to take options (allowing it to provide the features of other proposals such as  [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/479.md)).
+ 2. ~~Modify the general specification so that it can be extended in the future to take options (allowing it to provide the features of other proposals such as  [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/479.md))~~.
    - Likely as simple as allowing the second value to be a list in a similar fashion to how 457's proposal currently defines.
+   - > This has been implemented (see default values section).
  3. ~~Allow opts to be placed after the command arguments (this would mean args could not be used and is likely not a good solution~~
    - > simply using `$args` should be sufficient in this case.
  4. ~~Instead of a variable (`$opts`), options become local variables within the command body.~~
