[2.102417.211] 10/24/17 at 09:00 PM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -200,7 +200,8 @@ proc p {-debug -quiet -verbose -- args} {
  3. ~~Allow opts to be placed after the command arguments (this would mean args could not be used and is likely not a good solution~~
    - > simply using `$args` should be sufficient in this case.
  4. ~~Instead of a variable (`$opts`), options become local variables within the command body.~~
-  - > This is not ideal as the `$opts` dict allows us to easily pass opts on and removes the necessity for either removing the prefixed `-` or having to use `${-opt}` everywhere.
+  - > This is not ideal as the `$opts` arr/dict allows us to easily pass opts on and removes the necessity for either removing the prefixed `-` or having to use `${-opt}` everywhere.
+  - > This has been implemented within the pure tcl / testing implementation by passing the option `-localopts` when calling the given optcmd.
 
  5. Provide a way for options which may be boolean (-opt) OR value-based (-opt value).
    - One method for declaring this was proposed as `{-opt1 ?valName -opt2 valName -- args}` where `-opt1` could be provided as `procname -opt1` or `procname -opt1 $value`
