[2.102417.212] 10/24/17 at 09:01 PM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -2,6 +2,8 @@
 
 ### WORK IN PROGRESS
 
+### For the Pure TCL Implementation: [optcmds](https://github.com/Dash-OS/tcl-modules/blob/master/optcmds-1.3.1.tm)
+
 This TIP proposes an enhancement of the proc command to make the handling of the aforementioned options efficient and trivial.  This allows Tcl Programmers to provide a more uniform syntax across their apps without constantly writing slow and error-prone option parsing for each proc.  
 
 This is meant to be a simpler alternative to other proposals such as [TIP-457](http://core.tcl.tk/tips/doc/trunk/tip/457.md) (Named Arguments) which attempt to provide a framework of options and features to arguments.  
@@ -200,7 +202,7 @@ proc p {-debug -quiet -verbose -- args} {
  3. ~~Allow opts to be placed after the command arguments (this would mean args could not be used and is likely not a good solution~~
    - > simply using `$args` should be sufficient in this case.
  4. ~~Instead of a variable (`$opts`), options become local variables within the command body.~~
-  - > This is not ideal as the `$opts` arr/dict allows us to easily pass opts on and removes the necessity for either removing the prefixed `-` or having to use `${-opt}` everywhere.
+  - > This is not ideal as the `$opts` array/dict allows us to easily pass opts on and removes the necessity for either removing the prefixed `-` or having to use `${-opt}` everywhere.
   - > This has been implemented within the pure tcl / testing implementation by passing the option `-localopts` when calling the given optcmd.
 
  5. Provide a way for options which may be boolean (-opt) OR value-based (-opt value).
