[2.102417.213] 10/24/17 at 09:07 PM | by DashBot

--- a/docs/TIP-480.md
+++ b/docs/TIP-480.md
@@ -41,6 +41,7 @@ Throughout this specification, there are three basic principles of options which
 - The opts array contains an element that contains the raw opts that were used.  This is helpful for passing the opts if needed.  `{*}$opts()`
 - See the Implementation for how local variable options can be handled.
 - `[info options]` will be provided to get the options spec (if any) of a proc
+  - > Would return the opts directly with switch/toggle options having a value of {}.
 - `[info object/class options]` will be provided to get the options spec (if any) of a method.
 
 ## Declaration Syntax Examples
@@ -140,7 +141,7 @@ proc somecall {-command callback -timeout {ms 15000} -url url -method {method GE
 }
 ```
 
-> See the [examples](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl)] for how default values might be implemented into the syntax if the demand is overwhelming.
+> See the [examples](https://github.com/Dash-OS/tcl-modules/blob/master/examples/optcmds.tcl) for how default values might be implemented into the syntax if the demand is overwhelming.
 
 ### What about upvar, switch, and/or required?
 
